# bs

./: .gitignore  Cargo.toml  README.md  TZ.md
Docs/menuconfig/: defaults.txt  select_kernel.txt  select_mboard.txt
data/: defaults.toml  mboards.toml
data/opi-3b/: kernel.toml
data/opi-3lts/: kernel.toml
logs/: telemetry.toml
src/: build.rs  cli.rs  conf.rs  consts.rs  error.rs  main.rs  reqs.rs  run.rs  telemetry.rs  traits.rs  tui.rs  ui.rs  utils.rs
src/cli/: cmd.rs  msg.rs
src/conf/: build.rs  conf.rs  lfa.rs  log.rs  mboards.rs
src/telemetry/: hardware.rs  target.rs
src/tui/: error.rs  help.rs  master.rs  service.rs
src/ui/: error.rs  help.rs  master.rs  service.rs
