[package]
name = "bs"
version = "0.1.0"
edition = "2021"
description = "LFA automated build system"
authors = ["Pelmen Zharenny"]

[profile.release]
lto = true
strip = true
debug = false
opt-level = "s"
panic = "abort"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
cursive = "0.20.0"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
toml = "0.8.10"
