[package]
name = "bs"
version = "0.1.0"
edition = "2021"
description = "LFA automated build system"
authors = ["Pelmen Zharenny"]

[profile.release]
lto = true
strip = true
debug = false
opt-level = "s"
panic = "abort"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
cursive = "0.20.0"
futures = "0.3.30"
futures-util = "0.3.30"
indicatif = "0.17.8"
md5 = "0.7.0"
reqwest = { version = "0.12.1", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
